--- a/ui_adapt/config.json
+++ b/ui_adapt/config.json
@@ -117,8 +117,7 @@
     },
     "user_prefs":{
         "layout": "list",
-        "theme": "light",
-        "language": "spanish"
+        "theme": "light"
     }
   }
   
